<resources>
    <string name="app_name">EKA</string>
    <string name="on_boarding_first_text">Discover accurate and actionable insights from your data with Eka Analytics’ Intelligence Engine</string>
    <string name="on_boarding_two_text">Integrate multiple systems seamlessly across business processes with Eka Analytics’ Data Connectors</string>
    <string name="on_boarding_three_text">Tell your story the way you want to with prebuilt and high-value apps or create your own apps</string>
    <string name="domain_name_txt">Domain Name</string>
    <string name="domain_url_page_txt">This is the url you use to log in to Eka platform</string>
    <string name="next_txt">Next</string>
    <string name="skip">Skip</string>
    <string name="welcome_to">Welcome to</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_eka">Sign in with Eka</string>
    <string name="change_tenant">Change Tenant</string>
    <string name="domain_edt_txt_hint">Eg. https://your-organization.ekaplus.com</string>
    <string name="term_cond_sign_in_page">By using this application, you’re accepting all the Terms  Conditions, Privacy  Policy and Cookie Policy</string>
    <string name="eka_footer_txt">&#169; 2017-2019 Eka Software Solutions Pvt. Ltd.All rights reserved</string>
    <string name="version_txt">"Version "</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="problem_in_logging_in">Problem in logging in ?</string>
    <string name="by_using_terms_cond_prefix">By using this application, you’re accepting all the</string>
    <string name="terms_cond_part2"><![CDATA[\ Terms & Conditions, Privacy & Policy\]]></string>
    <string name="terms_cond_part3">\ and \</string>
    <string name="term_cond_part4">Cookie Policy</string>
    <string name="sign_in_with_your_credentials">Sign in with your credentials</string>
    <string name="back">Back</string>
    <string name="pls_enter_the_cred">Please enter the credentials</string>
    <string name="pls_enter_the_otp">Please enter the OTP</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="internet_error_msg">Kindly check internet connection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="apps">Apps</string>
    <string name="fav_title">Favourite</string>
    <string name="logout_confirmation">You won\'t be able to access any notification after logout</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="cancel_search_u"><u>Cancel</u></string>
    <string name="notification_channel_id">default</string>
    <string name="pls_entr_six_dgt_otp">Please enter six digit OTP</string>
    <string name="sign_in_with_okta">Sign in with <b>OKTA</b></string>
    <string name="recently_visited">Recently Visited</string>
    <string name="search_results">Search Results</string>
    <string name="about_us_ttl">About Us</string>
    <string name="done_txt">Done</string>
    <string name="start_recording">Start Recording</string>
    <string name="skip_txt">Skip</string>
    <string name="clear">Clear</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="remarks_lbl">Remarks:</string>
    <string name="enter_counter_bid_price">Enter counter bid price</string>
    <string name="counter_label">Counter</string>
    <string name="delivery_period">Delivery Period :</string>
    <string name="quantity_label">Quantity :</string>
    <string name="cancelled_txt">Cancelled</string>
    <string name="published_prices_tab_ttl">Published Prices</string>
    <string name="bid_tab_ttl">Bid</string>
    <string name="cancel_deal">Cancel Deal</string>
    <string name="rejection_confirmation">Rejection Confirmation</string>
    <string name="latest_bidder_price">Latest Bidder Price</string>
    <string name="you_are_rejecting_the_deal_once_proceeded_can_not_be_reverted">You are rejecting the deal, once proceeded can not be reverted.</string>
    <string name="reason_for_rejection_mandatory">Reason for rejection (Mandatory)</string>
    <string name="reject">Reject</string>
    <string name="change_password_ttl">Change Password</string>
    <string name="current_password_lbl">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="new_offer_ttl">New Offer</string>
    <string name="offer_type_lbl">Offer Type :</string>
    <string name="sales">Sales</string>
    <string name="purchase">Purchase</string>
    <string name="product_lbl">Product :</string>
    <string name="quality_lbl">Quality :</string>
    <string name="crop_year_lbl">Crop Year :</string>
    <string name="publish_price_lbl">Publish Price :</string>
    <string name="quantity_lbl">Quantity :</string>
    <string name="payment_term_lbl">Payment Term :</string>
    <string name="expiry_date_lbl">Expiry Date :</string>
    <string name="location">Location :</string>
    <string name="inco_term">Inco Term :</string>
    <string name="packing_type">Packing Type :</string>
    <string name="packing_size">Packing Size :</string>
    <string name="next">Next</string>
    <string name="image_name">Image Name</string>
    <string name="send_for_analysis">Send for Analysis</string>
    <string name="right_prediction">Right Prediction</string>
    <string name="not_sure">Not Sure</string>
    <string name="wrong_prediction">Wrong Prediction</string>
    <string name="image_analysis_result">Image Analysis Result</string>
    <string name="filters_ttl">Filters</string>
    <string name="basic_tab_ttl">Basic</string>
    <string name="advance_tab_ttl">Advance</string>
    <string name="action_filters">Action Filters</string>
    <string name="remove_all">Remove all</string>
    <string name="apply">Apply</string>
    <string name="offer">Offer</string>
    <string name="bid">Bid</string>
    <string name="create_new_blank_offer">Create New Blank Offer</string>
    <string name="duplicate_this_offer">Duplicate this Offer</string>
    <string name="exit">Exit</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="take_photo">Take Photo</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="affected_data_views">Affected Data Views:</string>
    <string name="filters">Filters</string>
    <string name="unable_to_render_chart">Unable to render chart</string>
    <string name="learn_more">Learn More</string>
    <string name="verification">Verification</string>
    <string name="one_time_password_otp_has_been_sent_to_your_registered_email">One Time Password (OTP) has been sent to your registered email.</string>
    <string name="please_enter_otp_to_verify_your_sign_in">Please enter OTP to verify your Sign-in.</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="please_contact_your_system_administrator_if_you_are_still_facing_issues">Please contact your System Administrator if you are still facing issues.</string>
    <string name="favourites">Favourites</string>
    <string name="about_us">About us</string>
    <string name="need_help">Need help?</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications">No Notifications</string>
    <string name="notification_details">Notification Details</string>
    <string name="no_record_found">No record found</string>
    <string name="sort_by">Sort By</string>
    <string name="how_was_your_recent_transaction_with_this_seller">How was your recent transaction with this seller.</string>
    <string name="please_rate">Please Rate</string>
    <string name="pricing">Pricing</string>
    <string name="quantity">Quantity</string>
    <string name="quality">Quality</string>
    <string name="shipment">Shipment</string>
    <string name="all">All</string>
    <string name="remarks">Remarks</string>
    <string name="done">Done</string>
    <string name="insights">Insights</string>
    <string name="share_screenshot">Share screenshot</string>
    <string name="share">Share</string>
    <string name="clear_all">Clear All</string>
    <string name="sign_in_with_microsoft">Sign in with Microsoft</string>
    <string name="slicer">Slicer</string>
    <string name="actions">actions</string>
    <string name="what_i_am_seeing">What am I seeing ?</string>
    <string name="no_remarks">No Remarks</string>
    <string name="cancelled">Cancelled</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="published_price">Published Price</string>
    <string name="location_lbl">Location</string>
    <string name="crop_year">Crop Year</string>
    <string name="ratings">Rating : </string>
    <string name="limit_type">Limit type : </string>
    <string name="measure_name">Measure name : </string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="about_us_r1">Eka is the global leader in providing Smart Commodity Management software solutions. Eka\'s analytics-driven, end-to-end Commodity Management platform enables companies to efficiently and profitably meet the challenges of complex and volatile markets.</string>
    <string name="about_usr2">The company’s best-of-breed solutions manage commodity trading, enterprise risk, compliance, procurement, supply chain, operations, logistics, bulk handling, processing, and decision support. Eka partners with customers to accelerate growth, increase profitability, improve operational control, and manage risks and exposures.</string>
    <string name="about_usr3">Eka is a team of 315 staff with offices in the Americas, Asia, Australia, and EMEA, serving a rapidly growing global client base across multiple commodity segments.</string>
    <string name="image_name_exists">Image name already exists!!</string>
    <string name="fc_ttl_bid">Farmer Connect (BID)</string>
    <string name="pls_provide_all_values">Please provide all values</string>
    <string name="confirmation">Confirmation</string>
    <string name="yor_are_accepting">You are accepting the bid at </string>
    <string name="success">Success</string>
    <string name="bid_placed_successfully">Bid has been placed successfully </string>
    <string name="your_msg_hs_sent">Your message has been sent </string>
    <string name="offer_type">Offer Type : </string>
    <string name="offer_id">Offer ID : </string>
    <string name="inco_term_lbl">Inco Term : </string>
    <string name="produt_lbl">Product : </string>
    <string name="delv_period">Delivery Period  : </string>
    <string name="offeror_ratings">Offeror\'s Rating : </string>
    <string name="publshed_prc">Published Price : </string>
    <string name="ltst_biddr_prc">Latest Bidder Price : </string>
    <string name="latst_offeror_prc">Latest Offeror Price : </string>
    <string name="your_rating">Your Rating : </string>
    <string name="rate_now">Rate Now</string>
    <string name="deal_accpted_by">The Deal was accepted by </string>
    <string name="deal_rejected_by">The Deal was rejected by </string>
    <string name="deal_cancelled_by">The Deal was cancelled by </string>
    <string name="bid_id">Bid ID : </string>
    <string name="send">Send</string>
    <string name="swtich_coporate">Switch Corporate</string>
</resources>