<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"

    android:layout_height="match_parent"
>

    <LinearLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/welcome_to_txt"
        android:text="@string/welcome_to"
        android:textStyle="bold"
        style="@style/prox_nova_reg_font"
        android:textColor="@color/welcome_to_txt_clr"
        android:layout_margin="@dimen/dimen_10dp"
        android:lineSpacingMultiplier="1.21"
        android:textSize="@dimen/welcome_to_txt_size"
        android:gravity="center"
        android:layout_width="match_parent"/>



    <ImageView
        android:id="@+id/eka_icon"
        android:layout_width="@dimen/on_boarding_img_width"
        android:layout_height="@dimen/on_boarding_im_height"
        android:src="@drawable/ic_eka_logo"
        android:layout_margin="@dimen/dimen_10dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/dimen_20dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.20"
        android:textSize="@dimen/sign_in_btn_txt_size"
        android:textAllCaps="false"
        android:text="@string/log_in"
        android:textColor="@color/sign_in_txt_clr"
        android:background="@drawable/login_btn_bg"
        style="@style/prox_nova_reg_font"

        />
        <TextView
            android:id="@+id/sign_in_with_ur_cred_tv"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            style="@style/prox_nova_reg_font"
            android:text="@string/sign_in_with_your_credentials"
            app:layout_constraintBottom_toTopOf="@+id/eka_footer_tv"
            android:textColor="@color/sign_in_with_ur_cred_txt_color"

            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>